# osm-merge

./: .gitignore  404.html  Makefile  Makefile.am  README.md  aclocal.m4  autogen.sh  blm.md~  configure  configure.ac  details.md~  index.html  libtool  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: mkdocs.yml  python-app.yml
CHANGELOG/: index.html
LICENSE/: index.html
about/: index.html
api/: index.html
api/basemapper/: index.html
api/conflator/: index.html
api/convert/: index.html
api/dbextract/: index.html
api/filter_data/: index.html
api/odk2osm/: index.html
api/osmfile/: index.html
api/parsers/: index.html
api/sqlite/: index.html
api/yamlfile/: index.html
basemapper/: index.html
blm/: index.html
boundaries/: index.html
calculations/: index.html
conflation/: index.html
contrib/: states.sh  update.sh
contrib/xlsforms/: Makefile  camping-nodata.xls
dataflow/: index.html
dbextract/: index.html
details/: index.html
docs/: Doxyfile  abbreviations.md  blm.md  boundaries.md  calculations.md  dataflow.md  dbextract.md  details.md  extending.md  externaldata.md  formats.md  highways.md  local-roads.md  mvum.md  odk2osm.md  odkconflation.md  osm-merge.md  osmhighways.md  setup.md  tm-splitter.md  trails.md  usgs.md  validating.md  wiki_redirect.md  xlsforms.md
docs/api/: basemapper.md  blm.md  conflator.md  convert.md  dbextract.md  filter_data.md  mvum.md  odk2osm.md  osmfile.md  parsers.md  sqlite.md  trails.md  yamlfile.md
extending/: index.html
externaldata/: index.html
fastclip/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  fastclip.cc  fastclip.hh  fconfig.h.in  libtool  main.cc  python.cc
formats/: index.html
highways/: index.html
libosm/: Makefile  Makefile.am  Makefile.in  datastore.cc  datastore.hh  geojson.cc  geojson.hh  libosm-test.cc  libosm.cc  libosm.hh  osmobjects.cc  osmobjects.hh  osmpbf.cc  osmpbf.hh  osmpbfreader.h  osmxml.cc  osmxml.hh  parsers.hh  python.cc
libosm/testsuite/test-data/: test.geojson  test.osm  test.pbf
local-roads/: index.html
mvum/: index.html
odk2osm/: index.html
odkconflation/: index.html
osm-merge/: index.html
osm2favorites/: index.html
osm_merge/: conflatePOI.py  conflator.py  dbextract.py  osmfile.py  pg2json.py  pgasync.py  readjson.py  yamlfile.py
osm_merge/fieldwork/: basemapper.py  convert.py  filter_data.py  imagery.yaml  odk2osm.py  osm2favorities.py  osmfile.py  parsers.py  sqlite.py
osm_merge/fieldwork/xlsforms/: .~lock.camping-nodata.xls#  .~lock.highways-nodata.xls#  Makefile.am  ODK XLSForm Template.xlsx  buildings-nodata.xls  buildings-nodata.xlsx  buildings-nodata.yaml  camping-nodata.xlsx  camping-nodata.yaml  highways-nodata.xls  highways-nodata.xlsx  highways-nodata.yaml  historical.xlsx  historical.yaml  yaml2xform.py
osm_merge/utilities/: blm.py  blm.yaml  dateutil.py  geojson2poly.py  importer.py  local-roads.py  local-roads.yaml  local_roads.py  mvum.py  mvum.yaml  nps.py  osmhighways.py  osmhighways.yaml  tm-splitter.py  tm_splitter.py  trails.py  trails.yaml  usgs.py  usgs.yaml
osmhighways/: index.html
search/: search_index.json
setup/: index.html
tests/: mvum_test.py
tests/data/: mvum.osm
tm-splitter/: index.html
trails/: index.html
usgs/: index.html
utilities/: index.html
validating/: index.html
wiki_redirect/: index.html
xlsforms/: index.html
zion/: index.html
