[project]
name = "osm_merge"
description = "Process external datasets for conflating with OSM"
authors = [
    {name = "Rob Savoye", email = "rob@senecass.com"},
]
dependencies = [
    "codetiming>=1.3.0",
    "geojson>=2.5.0",
    "progress>=1.6",
    "py_cpuinfo>=9.0.0",
    "shapely>=1.8.5",
    "thefuzz>=0.19.0",
    # levenshtein used by thefuzz underneath (do not remove)
    "levenshtein>=0.20.0",
    "xmltodict>=0.13.0",
    "haversine>=2.8.0",
    "osm-rawdata>=0.1.7",
    "fiona>=1.10.1",
    "pyproj>=3.7.1",
    "shapely>=2.0.7",
    "tqdm>=4.67.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "GPLv3"}
keywords = ["hot", "osm", "openstreetmap"]
classifiers = [
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
version = "0.1.0"

[project.urls]
homepage = "https://hotosm.github.io/osm-merge"
documentation = "https://hotosm.github.io/osm-merge"
repository = "https://github.com/hotosm/osm-merge"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
addopts = "-ra -q -p no:warnings"
testpaths = [
    "tests",
]
pythonpath = "osm_merge"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
version_files = [
    "pyproject.toml:version",
    "osm_merge/__version__.py",
]
update_changelog_on_bump = true

[tool.pdm]
version = {from = "osm_merge/__version__.py"}
distribution = true
[tool.pdm.build]
includes = ["osm_merge"]
source-includes = ["tests", "LICENSE.md", "README.md"]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "commitizen>=3.6.0",
    "pre-commit>=3.3.3",
]
debug = [
    "debugpy>=1.6.7.post1",
    "ipdb>=0.13.13",
]
test = [
    "pytest>=7.4.0",
]
docs = [
    "mkdocs>=1.5.2",
    "mkdocs-material>=9.2.3",
    "mkdocstrings-python>=1.5.2",
    "mkdocs-exclude>=1.0.2",
]

[tool.black]
line-length = 132
target-versions = ["py310", "py311"]

[tool.ruff]
fix = true
line-length = 132
target-version = "py310"
select = ["I", "E", "W", "D", "B", "F", "N", "Q"]
ignore = ["N805", "B008"]
exclude = [
    ".git",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
    "osm_merge/__version__.py",
]
[tool.ruff.pydocstyle]
convention = "google"

[project.scripts]
osm-merge = "osm_merge.conflator:main"
mvum = "osm_merge.utilities.mvum:main"
trails = "osm_merge.utilities.trails:main"
usgs = "osm_merge.utilities.usgs:main"
nps = "osm_merge.utilities.nps:main"
blm = "osm_merge.utilities.blm:main"
geojson2poly = "osm_merge.utilities.geojson2poly:main"
osmhighways = "osm_merge.utilities.osmhighways:main"
basemapper = "osm_merge.fieldwork.basemapper:main"
osm2favorites = "osm_merge.fieldwork.osm2favorities:main"
odk2osm = "osm_merge.fieldwork.odk2osm:main"
tm-splitter = "osm_merge.utilities.tm_splitter:main"
